# win-ifconfig

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  VERSION
.github/workflows/: ci.yml  release.yml
src/: control.rs  display.rs  main.rs  network.rs  types.rs
