[package]
name = "win-ifconfig"
version = "1.0.6"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "A colorful, feature-rich ifconfig for Windows — Linux-compatible output with extras"
homepage = "https://github.com/cumulus13/win-ifconfig"
repository = "https://github.com/cumulus13/win-ifconfig"
license = "MIT"
keywords = ["network", "ifconfig", "windows", "cli", "networking"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "ifconfig"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Com",
] }
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2"
itertools = "0.12"
regex = "1"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
